<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Block Spam</string>
    <string name="menu_settings">Settings</string>
    <string name="delete">Delete</string>
    <string name="text">Delete</string>
    <string name="add">Add</string>
    <string name="fromContacts">Contacts..</string>
    <string name="black">Black List</string>
    <string name="hint">Enter number...</string>
    <string name="toBlackList">to black list?</string>
    <string name="title_activity_add_to_spam">Suspicious SMS</string>
    <string name="add_text">Add to black list?</string>
    <string name="sender">Sender: </string>
    <string name="messageText">Text: </string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="title_activity_blacklist">Black List</string>
    <string name="title_activity_main">SMS Anti-Spam</string>
    <string name="lastMessages">Latest SMS</string>
    <string name="pressMessage">Press on the message, to add sender to the black list</string>
    <string name="callRejected">Rejected a call from</string>
    <string name="parametersHeader">Block Settings</string>
    <string name="log_header">Logging</string>
    <string name="settings1">Block calls</string>
    <string name="settings2">Block unknown numbers</string>
    <string name="blockedMessage">Blocked message from</string>
    <string name="blockedMessageUnknown">Blocked message from unknown number</string>
    <string name="empty">Empty!</string>
    <string name="alreadyExisits">Already exists!</string>
    <string name="dialogText">and delete messages</string>
    <string name="suspicious">Suspicious Words</string>
    <string name="whiteList">White List</string>
    <string name="expand">Expand</string>
    <string name="minimize">Minimize</string>
    <string name="ok">OK</string>
    <string name="rateExt">Rate this app</string>
    <string name="rate">Rate</string>
    <string name="spam">Spam</string>
    <string name="restore_message">Restore message?</string>
    <string name="ttl_spam">Time to store spam:</string>
    <string name="in_days">(in days)</string>
    <string name="feature">Version 1.5: added logging (you can send my logs, if something is not working, Settings->Send Logs)</string>
    <string name="newFeature">New feature!</string>
    <string name="action_settings">Settings</string>
    <string name="notification_text">Messages blocked today: </string>
    <string name="show_notification">Show notification</string>
    <string name="send_logs">Send logs</string>
    <string name="clear_logs">Clear logs</string>
    <string name="hello_world">Hello world!</string>

</resources>