<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="14dp"
        android:layout_marginTop="30dp"
        android:text="@string/parametersHeader"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    
    <View
        android:layout_height="2dp"
        android:layout_width="fill_parent"
        android:layout_below="@+id/textView1"
        android:background="@color/blue">
        
    </View>
    
    <ScrollView
      android:id="@+id/scrollView1"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_below="@+id/textView1"
      android:layout_above="@+id/suspiciousButton" >

      <RelativeLayout
          android:layout_width="match_parent"
          android:layout_height="match_parent">
          
              <CheckBox
		        android:id="@+id/blockCalls"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="22dp"
          		android:layout_marginLeft="28dp" 
		        android:text="@string/settings1" />
              
		    <CheckBox
		        android:id="@+id/blockUnknown"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_alignLeft="@+id/blockCalls"
		        android:layout_below="@+id/blockCalls"
		        android:text="@string/settings2"
		        android:layout_marginTop="22dp"  />

		    <TextView
		        android:id="@+id/textView2"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_below="@+id/blockUnknown"
		        android:layout_alignLeft="@+id/blockCalls"
		        android:text="@string/ttl_spam"
		        android:layout_marginTop="22dp"
		        android:textAppearance="?android:attr/textAppearanceMedium" />

		    <EditText
		        android:id="@+id/storeSpamDays"
		        android:maxLength="3"
		        android:layout_width="60dip"
		        android:layout_height="wrap_content"
		        android:layout_below="@+id/textView2"
		        android:layout_alignLeft="@+id/blockCalls"
		        android:ems="10"
		        android:inputType="number" >
		    </EditText>

		    <TextView
		        android:id="@+id/textView3"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_alignParentBottom="true"
		        android:layout_toRightOf="@+id/storeSpamDays"
		        android:text="@string/in_days"
		        android:textAppearance="?android:attr/textAppearanceMedium" />
          
      </RelativeLayout>
    </ScrollView>
    

    <Button
        android:id="@+id/whiteListButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:text="@string/whiteList" />

    <Button
        android:id="@+id/suspiciousButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/whiteListButton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:text="@string/suspicious" />



</RelativeLayout>